# 16th-EngiLink

./: .env.example  .gitignore  Makefile  Procfile  README.md  build.js  bundle.js  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
about/: models.py  urls.py  views.py
about/migrations/: 0001_initial.py
companies/: admin.py  forms.py  models.py  rules.py  urls.py  views.py
companies/migrations/: 0001_initial.py  0002_alter_company_options.py  0002_initial.py  0002_remove_company_email_company_custom_user.py  0003_alter_company_company_name_alter_company_tel_and_more.py  0003_alter_company_tel.py  0003_company_card_area_company_card_banner_and_more.py  0004_company_email.py  0004_rename_card_area_company_area_and_more.py  0005_alter_company_tags.py  0006_merge_20240522_0412.py  0007_remove_company_area_remove_company_tags_and_more.py  0008_user_company.py
core/: settings.py  urls.py  views.py
css/: output.css
educations/: apps.py  forms.py  models.py  rules.py  urls.py  views.py
educations/migrations/: 0001_initial.py  0002_initial.py  0002_rename_educations_education.py  0003_education_posit.py  0003_rename_profile_education_resume.py  0004_alter_education_resume.py  0005_alter_education_posit.py  0006_alter_education_end_date_alter_education_start_date.py  0007_alter_education_end_date_alter_education_start_date.py  0008_alter_education_options.py
jobs/: forms.py  models.py  rules.py  urls.py  views.py
jobs/migrations/: 0001_initial.py  0002_initial.py  0002_job_deleted_at.py  0003_job_company.py  0003_job_created_at_job_updated_at_alter_job_openings_and_more.py  0004_alter_job_company.py  0004_job_is_published.py  (+10 more)
projects/: forms.py  models.py  rules.py  urls.py  views.py
resume/: admin.py  forms.py  models.py  urls.py  views.py
resumes/: __init__.py  admin.py  apps.py  forms.py  models.py  rules.py  urls.py  views.py
scripts/: alpine.js  entry.js
static/: output.css
templates/: 404.html  500.html  backend.html  base.html  empty.html  frontend.html  home.html  login.html  my_base.html  pdf_template.html  pdf_template1.html  pdf_template2.html  pdf_template3.html  resume_area.html
users/: forms.py  models.py  rules.py  urls.py  views.py
works/: forms.py  models.py  rules.py  urls.py  views.py
(+183 files in other folders)
