[tool.poetry]
name = "EngiLink"
version = "0.1.0"
description = ""
authors = ["andyhuangdev <ah052691@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
django-crispy-forms = "^2.1"
crispy-tailwind = "^1.0.3"
django-storages = "^1.14.3"
boto3 = "^1.34.102"
rich = "^13.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
