[tool.poetry]
name = "EngiLink"
version = "0.1.0"
description = ""
authors = ["andyhuangdev <https://github.com/andyhuangdev>", "b89k57w62 <https://github.com/b89k57w62>", "ula0218 <https://github.com/ula0218>", "tw30006 <https://github.com/tw30006>", "yuling515 <https://github.com/yuling515>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
django-crispy-forms = "^2.1"
crispy-tailwind = "^1.0.3"
django-storages = "^1.14.3"
boto3 = "^1.34.102"
rich = "^13.7.1"
django-allauth = {extras = ["socialaccount"], version = "^0.62.1"}
google-auth-oauthlib = "^1.2.0"
pillow = "^10.3.0"
weasyprint = "^62.1"
rules = "^3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

